MHP-2006: Fix ministry tools menu z-index

--- a/app/assets/stylesheets/components/dropdown.scss
+++ b/app/assets/stylesheets/components/dropdown.scss
@@ -8,7 +8,7 @@
 
     .dropdown-container {
         position: relative;
-        z-index: 2;
+        z-index: 12;
     }
 
     .dropdown-content {
